--- a/css/style.scss
+++ b/css/style.scss
@@ -373,25 +373,29 @@ body,
 
 /* Responsive IMAGES */
 
+
 #particles-js {
 
   height: 87%;
-  padding-bottom: 466px;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center, center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center;
   background-size: cover;
+  background-attachment: fixed;
 
-   .container {
-     padding-top: 300px;
-     color: $white-color;
+  .container {
+    color: $white-color;
+    position: absolute;
+    margin: 180px;
 
-     h1 {
-       font-weight: bold;
-       font-size: 70px;
-     }
+    h1 {
+      font-weight: bold;
+      font-size: 70px;
+      top: 50%;
+      left: 50%;
+    }
 
-     h2 {
-       font-size: 50px;
-     }
-   }
+    h2 {
+      font-size: 50px;
+    }
+  }
 }
 
