--- a/css/style.scss
+++ b/css/style.scss
@@ -394,3 +394,22 @@ body,
   }
 }
 
+@media (max-width: 991px) {
+
+  #particles-js {
+    .container {
+      h1 { font-size: 42px;}
+      h2 { font-size: 36px;}
+    }
+  }
+}
+
+@media (max-width: 767px) {
+
+  #particles-js {
+    .container {
+      h1 { font-size: 42px;}
+      h2 { font-size: 28px;}
+    }
+  }
+}
