--- a/css/style.scss
+++ b/css/style.scss
@@ -408,6 +408,9 @@ body,
 
   #particles-js {
     .container {
+
+      padding: 0;
+
       h1 { font-size: 42px;}
       h2 { font-size: 28px;}
     }
