--- a/css/style.css
+++ b/css/style.css
@@ -250,9 +250,8 @@ body,
 /* PARTICLES SECTION */
 #particles-js {
   height: 100vh;
-  background: linear-gradient(rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center;
+  background: linear-gradient(rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center, fixed;
   background-size: cover;
-  background-attachment: fixed;
 }
 #particles-js .container {
   color: #ffffff;
