--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,8 @@ body,
   position: absolute;
   padding: 162px;
   margin-top: 50px;
+  padding-left: 0;
+  padding-right: 0;
 }
 #particles-js .container h1 {
   font-weight: bold;
@@ -273,26 +275,15 @@ body,
     padding-top: 120px;
   }
   #particles-js .container h1 {
-    font-size: 42px;
-    width: 500px;
+    font-size: 56px;
   }
   #particles-js .container h2 {
-    font-size: 36px;
+    font-size: 42px;
   }
 }
 @media (max-width: 767px) {
-  #particles-js {
-    height: 60vh;
-  }
-  #particles-js .container {
-    padding: 19px;
-    width: 450px;
-    margin-top: -35px;
-    margin-left: 50px;
-  }
   #particles-js .container h1 {
     font-size: 42px;
-    width: 423px;
   }
   #particles-js .container h2 {
     font-size: 28px;
