--- a/css/style.scss
+++ b/css/style.scss
@@ -380,7 +380,8 @@ body,
 
 @media (max-width: 991px) {
   #particles-js {
-
+    width: 100%;
+    height: 100%;
     padding-top: 120px;
     .container {
       h1 {
