--- a/css/style.css
+++ b/css/style.css
@@ -253,43 +253,39 @@ body,
   background: linear-gradient(rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center, fixed;
   background-size: cover;
 }
-#particles-js .container {
+#particles-js .container-fluid {
   color: #ffffff;
   position: absolute;
-  padding: 162px;
-  margin-top: 50px;
-  padding-left: 0;
-  padding-right: 0;
+  padding-top: 250px;
 }
-#particles-js .container h1 {
-  font-weight: bold;
+#particles-js .container-fluid h1 {
   font-size: 70px;
-  display: block;
 }
-#particles-js .container h2 {
+#particles-js .container-fluid h2 {
   font-size: 50px;
 }
 
 @media (max-width: 991px) {
-  #particles-js {
-    width: 100%;
-    height: 100%;
-    padding-top: 120px;
-  }
-  #particles-js .container h1 {
+  #particles-js .container-fluid h1 {
     font-size: 56px;
   }
-  #particles-js .container h2 {
+  #particles-js .container-fluid h2 {
     font-size: 42px;
   }
 }
 @media (max-width: 767px) {
-  #particles-js .container h1 {
-    font-size: 42px;
+  #particles-js .container-fluid h1 {
+    font-size: 53px;
   }
-  #particles-js .container h2 {
-    font-size: 28px;
+  #particles-js .container-fluid h2 {
+    font-size: 43px;
   }
 }
+/* A  new section */
+/* #new-section {
+  background: #1e7e34;
+  background-size: cover;
+  height: 100vh;
+} */
 
 /*# sourceMappingURL=style.css.map */
