--- a/css/style.scss
+++ b/css/style.scss
@@ -184,6 +184,7 @@ body,
     line-height: 80px;
     margin-left: 300px;
   }
+
   #about-text {
     margin-top: 80px;
   }
@@ -353,40 +354,36 @@ body,
 /* PARTICLES SECTION */
 
 #particles-js {
+
   height: 100vh;
   background: linear-gradient(rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center, fixed;
   background-size: cover;
 
-
-  .container {
+  .container-fluid {
     color: $white-color;
     position: absolute;
-    padding: 162px;
-    margin-top: 50px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-top: 250px;
+
 
     h1 {
-      font-weight: bold;
       font-size: 70px;
-      display: block;
     }
 
     h2 {
       font-size: 50px;
     }
+
   }
 }
 
 @media (max-width: 991px) {
   #particles-js {
-    width: 100%;
-    height: 100%;
-    padding-top: 120px;
-    .container {
+    //padding-top: 120px;
+    .container-fluid {
       h1 {
         font-size: 56px;
       }
+
       h2 {
         font-size: 42px;
       }
@@ -397,16 +394,22 @@ body,
 @media (max-width: 767px) {
   #particles-js {
 
-
-    .container {
-
+    .container-fluid {
       h1 {
-        font-size: 42px;
-
+        font-size: 53px;
       }
+
       h2 {
-        font-size: 28px;
+        font-size: 43px;
       }
     }
   }
 }
+
+/* A  new section */
+
+/* #new-section {
+  background: #1e7e34;
+  background-size: cover;
+  height: 100vh;
+} */
