--- a/css/style.scss
+++ b/css/style.scss
@@ -363,22 +363,23 @@ body,
 
 /* PARTICLES SECTION */
 
- #particles-js {
-
-  //height: 100vh;
-  background: linear-gradient(rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, center, fixed;
-  //background-size: 100% 127% !important;
-   height: 100vh;
-
+#particles-js {
+  height: 100vh;
+  background: linear-gradient(0deg, rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
+  background-size: cover;
 
   .container-fluid {
     color: $white-color;
     position: absolute;
     padding-top: 250px;
 
-    h1 {font-size: 70px;}
+    h1 {
+      font-size: 70px;
+    }
 
-    h2 {font-size: 50px;}
+    h2 {
+      font-size: 50px;
+    }
   }
 }
 
@@ -411,4 +412,11 @@ body,
       }
     }
   }
+}
+
+#technologies {
+  background: white;
+  margin: 150px;
+  text-align: center;
+  vertical-align: middle;
 }
