--- a/css/style.scss
+++ b/css/style.scss
@@ -418,5 +418,50 @@ body,
   background: white;
   margin: 150px;
   text-align: center;
-  vertical-align: middle;
+
+  i {
+    display: flex;
+    font-size: 60px;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    width: 127px;
+    height: 127px;
+    border-radius: 50%;
+    border: 1px solid black;
+
+    &:hover {
+      animation: flip-icons 1s forwards;
+    }
+  }
+
+  p {
+    font-size: 27px;
+    margin-top: 25px;
+
+    span {
+      display: block;
+      font-weight: bold;
+    }
+  }
+
+  @media (max-width: 1036px) {
+
+    p {font-size: 1em;}
+  }
+
+  @media (min-width: 991px) {
+
+    .col-md-3 {width: 25%;}
+  }
+  
+  @keyframes flip-icons {
+
+    0% {
+      transform: rotateY(0);
+    }
+    100% {
+      transform: rotateY(180deg);
+    }
+  }
 }
