--- a/css/style.scss
+++ b/css/style.scss
@@ -365,8 +365,10 @@ body,
 
 #particles-js {
   height: 100vh;
-  background: linear-gradient(0deg, rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
+  //background: linear-gradient(0deg, rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background-size: cover;
+
 
   .container-fluid {
     color: $white-color;
@@ -388,13 +390,8 @@ body,
   #particles-js {
 
     .container-fluid {
-      h1 {
-        font-size: 56px;
-      }
-
-      h2 {
-        font-size: 42px;
-      }
+      h1 {font-size: 4em;}
+      h2 {font-size: 3em;}
     }
   }
 }
@@ -415,11 +412,20 @@ body,
 }
 
 #technologies {
-  background: white;
-  margin: 150px;
+  background: $white-color;
   text-align: center;
+  padding-top: 100px;
 
-  i {
+  .h1 {
+    text-align: center;
+    font-weight: bold;
+
+    &:hover {
+      color: #4196F0;
+    }
+  }
+
+ /* i {
     display: flex;
     font-size: 60px;
     margin: auto;
@@ -433,6 +439,26 @@ body,
     &:hover {
       animation: flip-icons 1s forwards;
     }
+  } */
+
+  .container-fluid {
+
+    padding-top: 50px;
+
+  i {
+    font-size: 60px;
+    border:  1px solid black;
+    border-radius: 50%;
+    width: 127px;
+    height: 127px;
+    line-height: 2;
+
+    &:hover {
+      animation: flip-icons 1s forwards;
+      color: #4196F0;
+      border:  1px solid #4196F0;
+    }
+
   }
 
   p {
@@ -443,11 +469,14 @@ body,
       display: block;
       font-weight: bold;
     }
+
+  }
   }
 
-  @media (max-width: 1036px) {
+  @media (max-width: 1089px) {
 
     p {font-size: 1em;}
+   // p {font-size: 40.25em;}
   }
 
   @media (min-width: 991px) {
