--- a/css/style.scss
+++ b/css/style.scss
@@ -100,6 +100,7 @@ body {
 
     padding-top: 10px;
   }
+
 }
 
 /* End NAVIGATION */
@@ -159,6 +160,44 @@ body,
   }
 }
 
+/* Top Button */
+
+#top-button {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background: $red !important;
+  color: $white-color;
+  cursor: pointer;
+  padding: 15px;
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+
+
+  &:hover {
+
+    cursor: pointer;
+    background-color: #333;
+  }
+
+  &:after {
+    content: "\f077";
+    font-family: FontAwesome;
+    font-size: 1em;
+    //line-height: 50px;
+    vertical-align: middle;
+    color: #fff;
+  }
+
+}
+
+
 /* ABOUT SECTION  */
 
 #about-us {
@@ -212,8 +251,7 @@ body,
 
       &:hover {
 
-        // border-bottom: 1px solid $black-color;
-        border-radius: 0px;
+        border-radius: 0;
         color: $red;
       }
     }
@@ -365,7 +403,6 @@ body,
 
 #particles-js {
   height: 100vh;
-  //background: linear-gradient(0deg, rgba(2, 0, 36, 0.6), rgba(6, 6, 97, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background-size: cover;
 
@@ -411,6 +448,8 @@ body,
   }
 }
 
+/* Technologies Section */
+
 #technologies {
   background: $white-color;
   text-align: center;
@@ -424,22 +463,6 @@ body,
       color: #4196F0;
     }
   }
-
- /* i {
-    display: flex;
-    font-size: 60px;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    width: 127px;
-    height: 127px;
-    border-radius: 50%;
-    border: 1px solid black;
-
-    &:hover {
-      animation: flip-icons 1s forwards;
-    }
-  } */
 
   .container-fluid {
 
@@ -458,7 +481,6 @@ body,
       color: #4196F0;
       border:  1px solid #4196F0;
     }
-
   }
 
   p {
@@ -473,10 +495,8 @@ body,
   }
   }
 
-  @media (max-width: 1089px) {
+  @media (max-width: 1089px) { p {font-size: 1em;}
 
-    p {font-size: 1em;}
-   // p {font-size: 40.25em;}
   }
 
   @media (min-width: 991px) {
@@ -486,11 +506,7 @@ body,
   
   @keyframes flip-icons {
 
-    0% {
-      transform: rotateY(0);
-    }
-    100% {
-      transform: rotateY(180deg);
-    }
+    0% {transform: rotateY(0);}
+    100% {transform: rotateY(180deg); }
   }
 }
