--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 $white-color: #ffffff;
 $black-color: #000000;
@@ -12,7 +12,6 @@ $red: #e60000;
 }
 
 @mixin background-image {
-
   top: 0;
   bottom: 0;
   left: 0;
@@ -32,17 +31,15 @@ body {
 }
 
 .navbar {
-
   margin-top: -12px;
 
   .navbar-brand {
-
-    #first-name, #second-name {
+    #first-name,
+    #second-name {
       width: 150px;
     }
 
     #first-name {
-
       background: $white-color;
       color: $black-color !important;
       font-weight: bold;
@@ -50,7 +47,6 @@ body {
     }
 
     #second-name {
-
       color: $red;
       text-align: center;
       border-left: 1px solid $white-color;
@@ -61,7 +57,6 @@ body {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-
   border: 1px solid whitesmoke !important;
   color: $white-color;
   font-size: 20px;
@@ -83,9 +78,7 @@ body {
 /* RESPONSIVE DESIGN NAVIGATION */
 
 @media (max-width: 991px) {
-
   .navbar-expand-lg .navbar-nav .nav-link {
-
     color: $white-color;
     border: none !important;
 
@@ -97,16 +90,14 @@ body {
   }
 
   .pull-right {
-
     padding-top: 10px;
   }
-
 }
 
 /* End NAVIGATION */
 
 .scrolling-navbar {
-  transition: background .5s ease-in-out, padding .5s ease-in-out;
+  transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
 }
 
 /* Necessary for full page carousel*/
@@ -128,15 +119,15 @@ body,
 }
 
 .carousel-item:nth-child(1) {
-  @include images-slider('../assets/laptop2.jpg')
+  @include images-slider("../assets/laptop2.jpg");
 }
 
 .carousel-item:nth-child(2) {
-  @include images-slider('../assets/image3.jpg')
+  @include images-slider("../assets/image3.jpg");
 }
 
 .carousel-item:nth-child(3) {
-  @include images-slider('../assets/woman-at-the-gym.jpg')
+  @include images-slider("../assets/woman-at-the-gym.jpg");
 }
 
 .carousel-inner {
@@ -152,9 +143,9 @@ body,
 /* CAROUSEL RESPONSIVE */
 
 @media (max-width: 991px) {
-
   .carousel {
-    .carousel-control-prev-icon, .carousel-control-next-icon {
+    .carousel-control-prev-icon,
+    .carousel-control-next-icon {
       background: transparent !important;
     }
   }
@@ -179,9 +170,7 @@ body,
   height: 4em;
   border-radius: 50%;
 
-
   &:hover {
-
     cursor: pointer;
     background-color: #333;
   }
@@ -194,9 +183,7 @@ body,
     vertical-align: middle;
     color: #fff;
   }
-
 }
-
 
 /* ABOUT SECTION  */
 
@@ -206,7 +193,8 @@ body,
   margin-bottom: 120px;
 
   #dotted {
-    background: linear-gradient(90deg, #fff 2px, transparent 1%) center, linear-gradient(#fff 2px, transparent 1%) center, #ccc;
+    background: linear-gradient(90deg, #fff 2px, transparent 1%) center,
+      linear-gradient(#fff 2px, transparent 1%) center, #ccc;
     background-size: 5px 5px;
     height: 360px;
     width: 600px;
@@ -214,7 +202,6 @@ body,
   }
 
   .img-fluid {
-
     margin-top: 50px;
     max-width: 90%;
   }
@@ -242,7 +229,6 @@ body,
     margin-top: 50px;
 
     .nav-link {
-
       color: $black-color;
       background-color: transparent;
       letter-spacing: 2px;
@@ -250,7 +236,6 @@ body,
       font-weight: bold;
 
       &:hover {
-
         border-radius: 0;
         color: $red;
       }
@@ -260,9 +245,7 @@ body,
   /* VISION CONTAINER */
 
   #vision {
-
     .fa-bullseye {
-
       text-align: center;
       width: 100%;
       font-size: 50px;
@@ -270,7 +253,6 @@ body,
     }
 
     #our-vision-head {
-
       margin-top: 30px;
       line-height: 0;
       margin-left: 0;
@@ -290,18 +272,14 @@ body,
         position: absolute;
         margin-left: 61px;
       }
-
     }
-
   }
 }
 
 /* ABOUT and VISION CONTAINER RESPONSIVE */
 
 @media (max-width: 991px) {
-
   #about-us {
-
     #about-text {
       margin-top: 25px;
     }
@@ -309,7 +287,6 @@ body,
     h1 {
       text-align: center;
       margin-left: 0;
-
     }
 
     #about-banner {
@@ -326,18 +303,14 @@ body,
     }
 
     #vision {
-
       .img-gradient {
-
         #red-square {
           display: none;
         }
 
         .img-fluid {
-
           position: relative;
           margin-left: 0;
-
         }
       }
 
@@ -351,7 +324,6 @@ body,
 /* PROJECTS SECTION */
 
 #projects {
-
   background-color: #0d0d0d;
 
   #red-banner {
@@ -381,7 +353,6 @@ body,
     }
 
     .mask {
-
       &:hover {
         background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
       }
@@ -403,9 +374,9 @@ body,
 
 #particles-js {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background-size: cover;
-
 
   .container-fluid {
     color: $white-color;
@@ -422,27 +393,27 @@ body,
   }
 }
 
-
 @media (max-width: 991px) {
   #particles-js {
-
     .container-fluid {
-      h1 {font-size: 4em;}
-      h2 {font-size: 3em;}
+      h1 {
+        font-size: 4em;
+      }
+      h2 {
+        font-size: 3em;
+      }
     }
   }
 }
 
 @media (max-width: 767px) {
   #particles-js {
+    .bg-holder {
+      background-attachment: scroll;
+      background-size: 100% 100%;
+    }
 
-   .bg-holder {
-    background-attachment: scroll;
-     background-size: 100% 100%;
-   }
-   
     .container-fluid {
-      
       h1 {
         font-size: 50px;
       }
@@ -466,53 +437,128 @@ body,
     font-weight: bold;
 
     &:hover {
-      color: #4196F0;
+      color: #4196f0;
     }
   }
 
   .container-fluid {
-
     padding-top: 50px;
 
-  i {
-    font-size: 60px;
-    border:  1px solid black;
-    border-radius: 50%;
-    width: 127px;
-    height: 127px;
-    line-height: 2;
+    i {
+      font-size: 60px;
+      border: 1px solid black;
+      border-radius: 50%;
+      width: 127px;
+      height: 127px;
+      line-height: 2;
 
-    &:hover {
-      animation: flip-icons 1s forwards;
-      color: #4196F0;
-      border:  1px solid #4196F0;
+      &:hover {
+        animation: flip-icons 1s forwards;
+        color: #4196f0;
+        border: 1px solid #4196f0;
+      }
+    }
+
+    p {
+      font-size: 27px;
+      margin-top: 25px;
+
+      span {
+        display: block;
+        font-weight: bold;
+      }
     }
   }
 
-  p {
-    font-size: 27px;
-    margin-top: 25px;
-
-    span {
-      display: block;
-      font-weight: bold;
+  @media (max-width: 1089px) {
+    p {
+      font-size: 1em;
     }
-
-  }
-  }
-
-  @media (max-width: 1089px) { p {font-size: 1em;}
-
   }
 
   @media (min-width: 991px) {
-
-    .col-md-3 {width: 25%;}
+    .col-md-3 {
+      width: 25%;
+    }
   }
-  
-  @keyframes flip-icons {
 
-    0% {transform: rotateY(0);}
-    100% {transform: rotateY(180deg); }
+  @keyframes flip-icons {
+    0% {
+      transform: rotateY(0);
+    }
+    100% {
+      transform: rotateY(180deg);
+    }
   }
 }
+
+#testimonials {
+
+  background-color: #EEEEEE;
+  padding-top: 40px;
+  padding-bottom: 50px;
+
+  .wrapper-carousel-fix {
+    margin: auto;
+  }
+
+  .carousel-item {
+    background: none;
+    
+    p {
+      font-size: 18px;
+    }
+  }
+
+  .testimonial-carousel .carousel-control {
+    font-size: 5rem;
+    color: rgba(0, 0, 0, 0.6);
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+
+    
+  }
+  .carousel-control-next {
+    right: -60px;
+   }
+
+   .carousel-control-prev {
+    left: -60px;
+   }
+
+  .testimonial-carousel .carousel-control.right::before {
+    content: "\203a";
+  }
+  .testimonial-carousel .carousel-control.left::before {
+    content: "\2039";
+  }
+}
+
+#blogs {
+
+  padding-bottom: 60px;
+
+  h1 {
+    font-weight: bold;
+  }
+
+  .carousel-item {
+    background: none;
+  }
+}
+
+
+  footer {
+
+    background: $black-color;
+    color: $white-color;
+    padding-top: 30px;
+    text-align: center;
+  
+    .fab {
+      margin: auto;
+      font-size: 40px;
+      color: $white-color;
+      padding: 7px;
+    }
+  }
