--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 body {
   font-family: Montserrat, Roboto;
@@ -12,15 +11,19 @@ body {
 .navbar {
   margin-top: -12px;
 }
-.navbar .navbar-brand #first-name, .navbar .navbar-brand #second-name {
+
+.navbar .navbar-brand #first-name,
+.navbar .navbar-brand #second-name {
   width: 150px;
 }
+
 .navbar .navbar-brand #first-name {
   background: #ffffff;
   color: #000000 !important;
   font-weight: bold;
   text-align: center;
 }
+
 .navbar .navbar-brand #second-name {
   color: #e60000;
   text-align: center;
@@ -37,6 +40,7 @@ body {
   letter-spacing: 1px;
   text-align: center;
 }
+
 .navbar-expand-lg .navbar-nav .nav-link:hover {
   opacity: 0.9;
   color: #e60000 !important;
@@ -56,13 +60,14 @@ body {
   .navbar-expand-lg .navbar-nav .nav-link:hover {
     color: #e60000;
   }
-
   .pull-right {
     padding-top: 10px;
   }
 }
+
 /* End NAVIGATION */
 .scrolling-navbar {
+  -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
 }
 
@@ -85,16 +90,19 @@ body,
 }
 
 .carousel-item:nth-child(1) {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../assets/laptop2.jpg") no-repeat, center, center;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/laptop2.jpg") no-repeat, center, center;
   background-size: cover;
 }
 
 .carousel-item:nth-child(2) {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../assets/image3.jpg") no-repeat, center, center;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/image3.jpg") no-repeat, center, center;
   background-size: cover;
 }
 
 .carousel-item:nth-child(3) {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../assets/woman-at-the-gym.jpg") no-repeat, center, center;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/woman-at-the-gym.jpg") no-repeat, center, center;
   background-size: cover;
 }
@@ -105,10 +113,12 @@ body,
 
 /* CAROUSEL RESPONSIVE */
 @media (max-width: 991px) {
-  .carousel .carousel-control-prev-icon, .carousel .carousel-control-next-icon {
+  .carousel .carousel-control-prev-icon,
+  .carousel .carousel-control-next-icon {
     background: transparent !important;
   }
 }
+
 /* Top Button */
 #top-button {
   display: none;
@@ -127,12 +137,14 @@ body,
   height: 4em;
   border-radius: 50%;
 }
+
 #top-button:hover {
   cursor: pointer;
   background-color: #333;
 }
+
 #top-button:after {
-  content: "";
+  content: "\f077";
   font-family: FontAwesome;
   font-size: 1em;
   vertical-align: middle;
@@ -147,6 +159,7 @@ body,
   /* ABOUT CONTAINER */
   /* VISION CONTAINER */
 }
+
 #about-us #dotted {
   background: linear-gradient(90deg, #fff 2px, transparent 1%) center, linear-gradient(#fff 2px, transparent 1%) center, #ccc;
   background-size: 5px 5px;
@@ -154,27 +167,33 @@ body,
   width: 600px;
   margin-top: -455px;
 }
+
 #about-us .img-fluid {
   margin-top: 50px;
   max-width: 90%;
 }
+
 #about-us #about-banner {
   width: 300px;
   height: 42px;
   background-color: #e60000;
   float: right;
 }
+
 #about-us h1 {
   color: #000000;
   line-height: 80px;
   margin-left: 300px;
 }
+
 #about-us #about-text {
   margin-top: 80px;
 }
+
 #about-us .nav-pills {
   margin-top: 50px;
 }
+
 #about-us .nav-pills .nav-link {
   color: #000000;
   background-color: transparent;
@@ -182,28 +201,33 @@ body,
   padding-right: 70px;
   font-weight: bold;
 }
+
 #about-us .nav-pills .nav-link:hover {
   border-radius: 0;
   color: #e60000;
 }
+
 #about-us #vision .fa-bullseye {
   text-align: center;
   width: 100%;
   font-size: 50px;
   margin-top: 60px;
 }
+
 #about-us #vision #our-vision-head {
   margin-top: 30px;
   line-height: 0;
   margin-left: 0;
   text-align: center;
 }
+
 #about-us #vision .img-gradient #red-square {
   background: #e60000;
   width: 550px;
   height: 450px;
   float: right;
 }
+
 #about-us #vision .img-gradient .img-fluid {
   width: 80%;
   position: absolute;
@@ -240,39 +264,51 @@ body,
     margin-top: 0;
   }
 }
+
 /* PROJECTS SECTION */
 #projects {
   background-color: #0d0d0d;
 }
+
 #projects #red-banner {
   width: 300px;
   height: 42px;
   background-color: #e60000;
   float: left;
 }
+
 #projects .h1 {
   color: #ffffff;
   line-height: 72px;
   margin-left: 20px;
 }
+
 #projects .px-0 {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
 #projects .row {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 30px;
 }
+
 #projects .row img {
   width: 100%;
 }
+
 #projects .row .mask:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7)));
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
 }
+
 #projects .row .mask .white-text {
   font-size: 23px;
   letter-spacing: 1px;
 }
+
 #projects .no-gutters {
   margin-right: 0;
   margin-left: 0;
@@ -281,17 +317,21 @@ body,
 /* PARTICLES SECTION */
 #particles-js {
   height: 100vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.6))), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/business-remote-work.jpeg") no-repeat, fixed, center;
   background-size: cover;
 }
+
 #particles-js .container-fluid {
   color: #ffffff;
   position: absolute;
   padding-top: 250px;
 }
+
 #particles-js .container-fluid h1 {
   font-size: 70px;
 }
+
 #particles-js .container-fluid h2 {
   font-size: 50px;
 }
@@ -304,30 +344,40 @@ body,
     font-size: 3em;
   }
 }
+
 @media (max-width: 767px) {
+  #particles-js .bg-holder {
+    background-attachment: scroll;
+    background-size: 100% 100%;
+  }
   #particles-js .container-fluid h1 {
-    font-size: 40px;
+    font-size: 50px;
   }
   #particles-js .container-fluid h2 {
-    font-size: 30px;
+    font-size: 45px;
   }
 }
+
 /* Technologies Section */
 #technologies {
   background: #ffffff;
   text-align: center;
   padding-top: 100px;
 }
+
 #technologies .h1 {
   text-align: center;
   font-weight: bold;
 }
+
 #technologies .h1:hover {
-  color: #4196F0;
+  color: #4196f0;
 }
+
 #technologies .container-fluid {
   padding-top: 50px;
 }
+
 #technologies .container-fluid i {
   font-size: 60px;
   border: 1px solid black;
@@ -336,36 +386,122 @@ body,
   height: 127px;
   line-height: 2;
 }
+
 #technologies .container-fluid i:hover {
-  animation: flip-icons 1s forwards;
-  color: #4196F0;
-  border: 1px solid #4196F0;
+  -webkit-animation: flip-icons 1s forwards;
+          animation: flip-icons 1s forwards;
+  color: #4196f0;
+  border: 1px solid #4196f0;
 }
+
 #technologies .container-fluid p {
   font-size: 27px;
   margin-top: 25px;
 }
+
 #technologies .container-fluid p span {
   display: block;
   font-weight: bold;
 }
+
 @media (max-width: 1089px) {
   #technologies p {
     font-size: 1em;
   }
 }
+
 @media (min-width: 991px) {
   #technologies .col-md-3 {
     width: 25%;
   }
 }
-@keyframes flip-icons {
+
+@-webkit-keyframes flip-icons {
   0% {
-    transform: rotateY(0);
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
   }
   100% {
-    transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
   }
 }
 
+@keyframes flip-icons {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+  }
+  100% {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+
+#testimonials {
+  background-color: #EEEEEE;
+  padding-top: 40px;
+  padding-bottom: 50px;
+}
+
+#testimonials .wrapper-carousel-fix {
+  margin: auto;
+}
+
+#testimonials .carousel-item {
+  background: none;
+}
+
+#testimonials .carousel-item p {
+  font-size: 18px;
+}
+
+#testimonials .testimonial-carousel .carousel-control {
+  font-size: 5rem;
+  color: rgba(0, 0, 0, 0.6);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#testimonials .carousel-control-next {
+  right: -60px;
+}
+
+#testimonials .carousel-control-prev {
+  left: -60px;
+}
+
+#testimonials .testimonial-carousel .carousel-control.right::before {
+  content: "\203a";
+}
+
+#testimonials .testimonial-carousel .carousel-control.left::before {
+  content: "\2039";
+}
+
+#blogs {
+  padding-bottom: 60px;
+}
+
+#blogs h1 {
+  font-weight: bold;
+}
+
+#blogs .carousel-item {
+  background: none;
+}
+
+footer {
+  background: #000000;
+  color: #ffffff;
+  padding-top: 30px;
+  text-align: center;
+}
+
+footer .fab {
+  margin: auto;
+  font-size: 40px;
+  color: #ffffff;
+  padding: 7px;
+}
 /*# sourceMappingURL=style.css.map */
